<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST_ErrorEntry" Id="{a3a3bc94-dbfe-4a23-82d7-065e2d88f20a}">
    <Declaration><![CDATA[TYPE ST_ErrorEntry :
STRUCT
    ErrorNum    : ULINT := 0;               //ID of the Error entry
    ErrorState  : DUT_ErrorState;           //State of the error

    //Error related
    iTerminalID     : INT;                  //ID of the terminal
    sDateTimeOn     : STRING(24);           //Date and time when the error occured
    sDateTimeOff    : STRING(24);           //Date and time when the error disapeared
    sErrorMessage   : STRING (128);         //Description of the event

    ErrorPriority   : INT;                  //Priority of the error
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>