<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="EL3214" Id="{8160dea5-c305-4e5c-875a-980ca06776f9}" SpecialFunc="None">
    <Declaration><![CDATA[//EL3214 | 4-channel analog input terminal, PT100 (RTD)
FUNCTION_BLOCK EL3214

VAR_INPUT
    En              : BOOL;
    iTerminal_ID    : INT;
    ErrorSystem     : POINTER TO ST_ErrorSystem;
END_VAR

VAR_OUTPUT
    EnO     : BOOL;
    bError  : BOOL;
	sErrorMessage : STRING;
	iAI_1 AT %I* :INT:=0;
	iAI_2 AT %I* :INT:=0;
	iAI_3 AT %I* :INT:=0;
	iAI_4 AT %I* :INT:=0;
END_VAR

VAR
    //Channels
    wCh1_Status     AT %I* : WORD;
    wCh2_Status     AT %I* : WORD;
    wCh3_Status     AT %I* : WORD;
    wCh4_Status     AT %I* : WORD;

    //Terminal status
    WcState_WcState     AT %I*: BOOL;
    InfoData_State      AT %I*: UINT;

    //FB-s
    EL3214_Error    : FB_TerminalError;
    CH1_Error       : FB_GenericError;
    CH2_Error       : FB_GenericError;
    CH3_Error       : FB_GenericError;
    CH4_Error       : FB_GenericError;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*
* TODO: Test on hardware
*)

EnO := En;

//Channel #1 Status
IF (wCh1_Status AND 16#0043) <> 0 THEN
    CH1_Error.sErrorMessage := 'EL3214 Channel #1: ';
    IF wCh1_Status.0    THEN    CH1_Error.sErrorMessage := CONCAT(CH1_Error.sErrorMessage, 'Underrange; ');             IF CH1_Error.ErrorPriority > 100 OR CH1_Error.ErrorPriority = 0     THEN CH1_Error.ErrorPriority := 100;    END_IF      END_IF
    IF wCh1_Status.1    THEN    CH1_Error.sErrorMessage := CONCAT(CH1_Error.sErrorMessage, 'Overrange; ');              IF CH1_Error.ErrorPriority > 100 OR CH1_Error.ErrorPriority = 0     THEN CH1_Error.ErrorPriority := 100;    END_IF      END_IF
    IF wCh1_Status.6    THEN    CH1_Error.sErrorMessage := CONCAT(CH1_Error.sErrorMessage, 'Error; ');                  IF CH1_Error.ErrorPriority > 10  OR CH1_Error.ErrorPriority = 0     THEN CH1_Error.ErrorPriority := 10;     END_IF      END_IF
    CH1_Error.bError := TRUE;
ELSE
    CH1_Error.bError := FALSE;
    CH1_Error.sErrorMessage := '';
END_IF

//Channel #2 Status
IF (wCh2_Status AND 16#0043) <> 0 THEN
    CH2_Error.sErrorMessage := 'EL3214 Channel #2: ';
    IF wCh2_Status.0    THEN    CH2_Error.sErrorMessage := CONCAT(CH2_Error.sErrorMessage, 'Underrange; ');             IF CH2_Error.ErrorPriority > 100 OR CH2_Error.ErrorPriority = 0     THEN CH2_Error.ErrorPriority := 100;    END_IF      END_IF
    IF wCh2_Status.1    THEN    CH2_Error.sErrorMessage := CONCAT(CH2_Error.sErrorMessage, 'Overrange; ');              IF CH2_Error.ErrorPriority > 100 OR CH2_Error.ErrorPriority = 0     THEN CH2_Error.ErrorPriority := 100;    END_IF      END_IF
    IF wCh2_Status.6    THEN    CH2_Error.sErrorMessage := CONCAT(CH2_Error.sErrorMessage, 'Error; ');                  IF CH2_Error.ErrorPriority > 10  OR CH2_Error.ErrorPriority = 0     THEN CH2_Error.ErrorPriority := 10;     END_IF      END_IF
    CH2_Error.bError := TRUE;
ELSE
    CH2_Error.bError := FALSE;
    CH2_Error.sErrorMessage := '';
END_IF

//Channel #3 Status
IF (wCh3_Status AND 16#0043) <> 0 THEN
    CH3_Error.sErrorMessage := 'EL3214 Channel #3: ';
    IF wCh3_Status.0    THEN    CH3_Error.sErrorMessage := CONCAT(CH3_Error.sErrorMessage, 'Underrange; ');             IF CH3_Error.ErrorPriority > 100 OR CH3_Error.ErrorPriority = 0     THEN CH3_Error.ErrorPriority := 100;    END_IF      END_IF
    IF wCh3_Status.1    THEN    CH3_Error.sErrorMessage := CONCAT(CH3_Error.sErrorMessage, 'Overrange; ');              IF CH3_Error.ErrorPriority > 100 OR CH3_Error.ErrorPriority = 0     THEN CH3_Error.ErrorPriority := 100;    END_IF      END_IF
    IF wCh3_Status.6    THEN    CH3_Error.sErrorMessage := CONCAT(CH3_Error.sErrorMessage, 'Error; ');                  IF CH3_Error.ErrorPriority > 10  OR CH3_Error.ErrorPriority = 0     THEN CH3_Error.ErrorPriority := 10;     END_IF      END_IF
    CH3_Error.bError := TRUE;
ELSE
    CH3_Error.bError := FALSE;
    CH3_Error.sErrorMessage := '';
END_IF

//Channel #4 Status
IF (wCh4_Status AND 16#0043) <> 0 THEN
    CH4_Error.sErrorMessage := 'EL3214 Channel #4: ';
    IF wCh4_Status.0    THEN    CH4_Error.sErrorMessage := CONCAT(CH4_Error.sErrorMessage, 'Underrange; ');             IF CH4_Error.ErrorPriority > 100 OR CH4_Error.ErrorPriority = 0     THEN CH4_Error.ErrorPriority := 100;    END_IF      END_IF
    IF wCh4_Status.1    THEN    CH4_Error.sErrorMessage := CONCAT(CH4_Error.sErrorMessage, 'Overrange; ');              IF CH4_Error.ErrorPriority > 100 OR CH4_Error.ErrorPriority = 0     THEN CH4_Error.ErrorPriority := 100;    END_IF      END_IF
    IF wCh4_Status.6    THEN    CH4_Error.sErrorMessage := CONCAT(CH4_Error.sErrorMessage, 'Error; ');                  IF CH4_Error.ErrorPriority > 10  OR CH4_Error.ErrorPriority = 0     THEN CH4_Error.ErrorPriority := 10;     END_IF      END_IF
    CH4_Error.bError := TRUE;
ELSE
    CH4_Error.bError := FALSE;
    CH4_Error.sErrorMessage := '';
END_IF

//Error FB instance
EL3214_Error(
    En                  := TRUE,
    iTerminal_ID        := iTerminal_ID,
    bWcState            := WcState_WcState,
    uiInfoData_State    := InfoData_State,
    pErrorSystem        := ErrorSystem,
    bError              => bError,
);

CH1_Error (
    En              := En,
    bError          := ,
    sErrorMessage   := ,
    ErrorPriority   := ,
    iTerminal_ID    := iTerminal_ID,
    pErrorSystem    := ErrorSystem,
    EnO             => ,
);

CH2_Error (
    En              := En,
    bError          := ,
    sErrorMessage   := ,
    ErrorPriority   := ,
    iTerminal_ID    := iTerminal_ID,
    pErrorSystem    := ErrorSystem,
    EnO             => ,
);

CH3_Error (
    En              := En,
    bError          := ,
    sErrorMessage   := ,
    ErrorPriority   := ,
    iTerminal_ID    := iTerminal_ID,
    pErrorSystem    := ErrorSystem,
    EnO             => ,
);

CH4_Error (
    En              := En,
    bError          := ,
    sErrorMessage   := ,
    ErrorPriority   := ,
    iTerminal_ID    := iTerminal_ID,
    pErrorSystem    := ErrorSystem,
    EnO             => ,
);

bError:=EL3214_Error.bError OR CH1_Error.bError OR CH2_Error.bError OR  CH3_Error.bError OR CH4_Error.bError ;

IF bError THEN
  IF EL3214_Error.bError THEN
	sErrorMessage:=EL3214_Error.ErrorData.sErrorMessage;
  ELSIF CH1_Error.bError THEN
    sErrorMessage:=CH1_Error.sErrorMessage;
  ELSIF CH2_Error.bError THEN
    sErrorMessage:=CH2_Error.sErrorMessage;
  ELSIF CH3_Error.bError THEN
    sErrorMessage:=CH3_Error.sErrorMessage;
  ELSIF CH4_Error.bError THEN
    sErrorMessage:=CH4_Error.sErrorMessage;
  ELSE
	sErrorMessage:='';
  END_IF
ELSE 
  sErrorMessage:='';
END_IF
]]></ST>
    </Implementation>
    <LineIds Name="EL3214">
      <LineId Id="50" Count="1" />
      <LineId Id="12" Count="0" />
      <LineId Id="54" Count="1" />
      <LineId Id="140" Count="0" />
      <LineId Id="144" Count="5" />
      <LineId Id="152" Count="3" />
      <LineId Id="143" Count="0" />
      <LineId Id="157" Count="0" />
      <LineId Id="159" Count="9" />
      <LineId Id="158" Count="0" />
      <LineId Id="169" Count="10" />
      <LineId Id="156" Count="0" />
      <LineId Id="181" Count="7" />
      <LineId Id="229" Count="0" />
      <LineId Id="190" Count="1" />
      <LineId Id="180" Count="0" />
      <LineId Id="56" Count="9" />
      <LineId Id="99" Count="0" />
      <LineId Id="98" Count="0" />
      <LineId Id="102" Count="5" />
      <LineId Id="109" Count="0" />
      <LineId Id="101" Count="0" />
      <LineId Id="111" Count="8" />
      <LineId Id="110" Count="0" />
      <LineId Id="121" Count="8" />
      <LineId Id="120" Count="0" />
      <LineId Id="131" Count="8" />
      <LineId Id="130" Count="0" />
      <LineId Id="266" Count="0" />
      <LineId Id="273" Count="0" />
      <LineId Id="267" Count="3" />
      <LineId Id="274" Count="1" />
      <LineId Id="278" Count="0" />
      <LineId Id="277" Count="0" />
      <LineId Id="280" Count="0" />
      <LineId Id="279" Count="0" />
      <LineId Id="282" Count="0" />
      <LineId Id="281" Count="0" />
      <LineId Id="271" Count="1" />
      <LineId Id="265" Count="0" />
      <LineId Id="285" Count="1" />
      <LineId Id="263" Count="0" />
      <LineId Id="262" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>