<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="EL3255" Id="{196b856f-d8fb-491f-ab71-4ec8edd9b398}" SpecialFunc="None">
    <Declaration><![CDATA[//EL3255 | 5-channel potentiometer measurement with sensor supply
FUNCTION_BLOCK EL3255

VAR_INPUT
    En              : BOOL;
    iTerminal_ID    : INT;
    ErrorSystem     : POINTER TO ST_ErrorSystem;
END_VAR

VAR_OUTPUT
    EnO     : BOOL;
    bError  : BOOL;
END_VAR

VAR
    wCH1_Status     AT %I*  : WORD;
    wCH2_Status     AT %I*  : WORD;
    wCH3_Status     AT %I*  : WORD;
    wCH4_Status     AT %I*  : WORD;
    wCH5_Status     AT %I*  : WORD;
    WcState_WcState AT %I*  : BOOL;
    InfoData_State  AT %I*  : UINT;

    //FB-s
    EL3255_Error    : FB_TerminalError;
    CH1_Error       : FB_GenericError;
    CH2_Error       : FB_GenericError;
    CH3_Error       : FB_GenericError;
    CH4_Error       : FB_GenericError;
    CH5_Error       : FB_GenericError;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*
* TODO: Test on hardware
*)
EnO:=En;

IF En THEN
    //Channel #1 Status
    IF (wCh1_Status AND 16#2057) <> 0 THEN
        CH1_Error.sErrorMessage := 'EL3255 Channel #1: ';
        IF wCH1_Status.0    THEN    CH1_Error.sErrorMessage := CONCAT(CH1_Error.sErrorMessage, 'Underrange; ');             IF CH1_Error.ErrorPriority > 100 OR CH1_Error.ErrorPriority = 0     THEN CH1_Error.ErrorPriority := 100;    END_IF      END_IF
        IF wCH1_Status.1    THEN    CH1_Error.sErrorMessage := CONCAT(CH1_Error.sErrorMessage, 'Overrange; ');              IF CH1_Error.ErrorPriority > 100 OR CH1_Error.ErrorPriority = 0     THEN CH1_Error.ErrorPriority := 100;    END_IF      END_IF
        IF wCh1_Status.2    THEN    CH1_Error.sErrorMessage := CONCAT(CH1_Error.sErrorMessage, 'Limit 1; ');                IF CH1_Error.ErrorPriority > 100 OR CH1_Error.ErrorPriority = 0     THEN CH1_Error.ErrorPriority := 100;    END_IF      END_IF
        IF wCh1_Status.4    THEN    CH1_Error.sErrorMessage := CONCAT(CH1_Error.sErrorMessage, 'Limit 2; ');                IF CH1_Error.ErrorPriority > 100 OR CH1_Error.ErrorPriority = 0     THEN CH1_Error.ErrorPriority := 100;    END_IF      END_IF
        IF wCh1_Status.6    THEN    CH1_Error.sErrorMessage := CONCAT(CH1_Error.sErrorMessage, 'Error; ');                  IF CH1_Error.ErrorPriority > 10  OR CH1_Error.ErrorPriority = 0     THEN CH1_Error.ErrorPriority := 10;     END_IF      END_IF
        IF wCh1_Status.13   THEN    CH1_Error.sErrorMessage := CONCAT(CH1_Error.sErrorMessage, 'Sync error; ');             IF CH1_Error.ErrorPriority > 10  OR CH1_Error.ErrorPriority = 0     THEN CH1_Error.ErrorPriority := 10;     END_IF      END_IF
        CH1_Error.bError := TRUE;
    ELSE
        CH1_Error.bError        := FALSE;
        CH1_Error.sErrorMessage := '';
    END_IF

    //Channel #2 Status
    IF (wCh2_Status AND 16#2057) <> 0 THEN
        CH2_Error.sErrorMessage := 'EL3255 Channel #2: ';
        IF wCH2_Status.0    THEN    CH2_Error.sErrorMessage := CONCAT(CH2_Error.sErrorMessage, 'Underrange; ');             IF CH2_Error.ErrorPriority > 100 OR CH2_Error.ErrorPriority = 0     THEN CH2_Error.ErrorPriority := 100;    END_IF      END_IF
        IF wCH2_Status.1    THEN    CH2_Error.sErrorMessage := CONCAT(CH2_Error.sErrorMessage, 'Overrange; ');              IF CH2_Error.ErrorPriority > 100 OR CH2_Error.ErrorPriority = 0     THEN CH2_Error.ErrorPriority := 100;    END_IF      END_IF
        IF wCh2_Status.2    THEN    CH2_Error.sErrorMessage := CONCAT(CH2_Error.sErrorMessage, 'Limit 1; ');                IF CH2_Error.ErrorPriority > 100 OR CH2_Error.ErrorPriority = 0     THEN CH2_Error.ErrorPriority := 100;    END_IF      END_IF
        IF wCh2_Status.4    THEN    CH2_Error.sErrorMessage := CONCAT(CH2_Error.sErrorMessage, 'Limit 2; ');                IF CH2_Error.ErrorPriority > 100 OR CH2_Error.ErrorPriority = 0     THEN CH2_Error.ErrorPriority := 100;    END_IF      END_IF
        IF wCh2_Status.6    THEN    CH2_Error.sErrorMessage := CONCAT(CH2_Error.sErrorMessage, 'Error; ');                  IF CH2_Error.ErrorPriority > 10  OR CH2_Error.ErrorPriority = 0     THEN CH2_Error.ErrorPriority := 10;     END_IF      END_IF
        IF wCh2_Status.13   THEN    CH2_Error.sErrorMessage := CONCAT(CH2_Error.sErrorMessage, 'Sync error; ');             IF CH2_Error.ErrorPriority > 10  OR CH2_Error.ErrorPriority = 0     THEN CH2_Error.ErrorPriority := 10;     END_IF      END_IF
        CH2_Error.bError := TRUE;
    ELSE
        CH2_Error.bError        := FALSE;
        CH2_Error.sErrorMessage := '';
    END_IF

    //Channel #3 Status
    IF (wCh3_Status AND 16#2057) <> 0 THEN
        CH3_Error.sErrorMessage := 'EL3255 Channel #3: ';
        IF wCH3_Status.0    THEN    CH3_Error.sErrorMessage := CONCAT(CH3_Error.sErrorMessage, 'Underrange; ');             IF CH3_Error.ErrorPriority > 100 OR CH3_Error.ErrorPriority = 0     THEN CH3_Error.ErrorPriority := 100;    END_IF      END_IF
        IF wCH3_Status.1    THEN    CH3_Error.sErrorMessage := CONCAT(CH3_Error.sErrorMessage, 'Overrange; ');              IF CH3_Error.ErrorPriority > 100 OR CH3_Error.ErrorPriority = 0     THEN CH3_Error.ErrorPriority := 100;    END_IF      END_IF
        IF wCh3_Status.2    THEN    CH3_Error.sErrorMessage := CONCAT(CH3_Error.sErrorMessage, 'Limit 1; ');                IF CH3_Error.ErrorPriority > 100 OR CH3_Error.ErrorPriority = 0     THEN CH3_Error.ErrorPriority := 100;    END_IF      END_IF
        IF wCh3_Status.4    THEN    CH3_Error.sErrorMessage := CONCAT(CH3_Error.sErrorMessage, 'Limit 2; ');                IF CH3_Error.ErrorPriority > 100 OR CH3_Error.ErrorPriority = 0     THEN CH3_Error.ErrorPriority := 100;    END_IF      END_IF
        IF wCh3_Status.6    THEN    CH3_Error.sErrorMessage := CONCAT(CH3_Error.sErrorMessage, 'Error; ');                  IF CH3_Error.ErrorPriority > 10  OR CH3_Error.ErrorPriority = 0     THEN CH3_Error.ErrorPriority := 10;     END_IF      END_IF
        IF wCh3_Status.13   THEN    CH3_Error.sErrorMessage := CONCAT(CH3_Error.sErrorMessage, 'Sync error; ');             IF CH3_Error.ErrorPriority > 10  OR CH3_Error.ErrorPriority = 0     THEN CH3_Error.ErrorPriority := 10;     END_IF      END_IF
        CH3_Error.bError := TRUE;
    ELSE
        CH3_Error.bError        := FALSE;
        CH3_Error.sErrorMessage := '';
    END_IF

    //Channel #4 Status
    IF (wCh4_Status AND 16#2057) <> 0 THEN
        CH4_Error.sErrorMessage := 'EL3255 Channel #4: ';
        IF wCH4_Status.0    THEN    CH4_Error.sErrorMessage := CONCAT(CH4_Error.sErrorMessage, 'Underrange; ');             IF CH4_Error.ErrorPriority > 100 OR CH4_Error.ErrorPriority = 0     THEN CH4_Error.ErrorPriority := 100;    END_IF      END_IF
        IF wCH4_Status.1    THEN    CH4_Error.sErrorMessage := CONCAT(CH4_Error.sErrorMessage, 'Overrange; ');              IF CH4_Error.ErrorPriority > 100 OR CH4_Error.ErrorPriority = 0     THEN CH4_Error.ErrorPriority := 100;    END_IF      END_IF
        IF wCh4_Status.2    THEN    CH4_Error.sErrorMessage := CONCAT(CH4_Error.sErrorMessage, 'Limit 1; ');                IF CH4_Error.ErrorPriority > 100 OR CH4_Error.ErrorPriority = 0     THEN CH4_Error.ErrorPriority := 100;    END_IF      END_IF
        IF wCh4_Status.4    THEN    CH4_Error.sErrorMessage := CONCAT(CH4_Error.sErrorMessage, 'Limit 2; ');                IF CH4_Error.ErrorPriority > 100 OR CH4_Error.ErrorPriority = 0     THEN CH4_Error.ErrorPriority := 100;    END_IF      END_IF
        IF wCh4_Status.6    THEN    CH4_Error.sErrorMessage := CONCAT(CH4_Error.sErrorMessage, 'Error; ');                  IF CH4_Error.ErrorPriority > 10  OR CH4_Error.ErrorPriority = 0     THEN CH4_Error.ErrorPriority := 10;     END_IF      END_IF
        IF wCh4_Status.13   THEN    CH4_Error.sErrorMessage := CONCAT(CH4_Error.sErrorMessage, 'Sync error; ');             IF CH4_Error.ErrorPriority > 10  OR CH4_Error.ErrorPriority = 0     THEN CH4_Error.ErrorPriority := 10;     END_IF      END_IF
        CH4_Error.bError := TRUE;
    ELSE
        CH4_Error.bError        := FALSE;
        CH4_Error.sErrorMessage := '';
    END_IF

    //Channel #5 Status
    IF (wCh5_Status AND 16#2057) <> 0 THEN
        CH5_Error.sErrorMessage := 'EL3255 Channel #5: ';
        IF wCH5_Status.0    THEN    CH5_Error.sErrorMessage := CONCAT(CH5_Error.sErrorMessage, 'Underrange; ');             IF CH5_Error.ErrorPriority > 100 OR CH5_Error.ErrorPriority = 0     THEN CH5_Error.ErrorPriority := 100;    END_IF      END_IF
        IF wCH5_Status.1    THEN    CH5_Error.sErrorMessage := CONCAT(CH5_Error.sErrorMessage, 'Overrange; ');              IF CH5_Error.ErrorPriority > 100 OR CH5_Error.ErrorPriority = 0     THEN CH5_Error.ErrorPriority := 100;    END_IF      END_IF
        IF wCh5_Status.2    THEN    CH5_Error.sErrorMessage := CONCAT(CH5_Error.sErrorMessage, 'Limit 1; ');                IF CH5_Error.ErrorPriority > 100 OR CH5_Error.ErrorPriority = 0     THEN CH5_Error.ErrorPriority := 100;    END_IF      END_IF
        IF wCh5_Status.4    THEN    CH5_Error.sErrorMessage := CONCAT(CH5_Error.sErrorMessage, 'Limit 2; ');                IF CH5_Error.ErrorPriority > 100 OR CH5_Error.ErrorPriority = 0     THEN CH5_Error.ErrorPriority := 100;    END_IF      END_IF
        IF wCh5_Status.6    THEN    CH5_Error.sErrorMessage := CONCAT(CH5_Error.sErrorMessage, 'Error; ');                  IF CH5_Error.ErrorPriority > 10  OR CH5_Error.ErrorPriority = 0     THEN CH5_Error.ErrorPriority := 10;     END_IF      END_IF
        IF wCh5_Status.13   THEN    CH5_Error.sErrorMessage := CONCAT(CH5_Error.sErrorMessage, 'Sync error; ');             IF CH5_Error.ErrorPriority > 10  OR CH5_Error.ErrorPriority = 0     THEN CH5_Error.ErrorPriority := 10;     END_IF      END_IF
        CH5_Error.bError := TRUE;
    ELSE
        CH5_Error.bError        := FALSE;
        CH5_Error.sErrorMessage := '';
    END_IF

END_IF

//Error FB instance
EL3255_Error(
    En                  := TRUE,
    iTerminal_ID        := iTerminal_ID,
    bWcState            := WcState_WcState,
    uiInfoData_State    := InfoData_State,
    pErrorSystem        := ErrorSystem,
    bError              => bError,
);

CH1_Error (
    En              := En,
    bError          := ,
    sErrorMessage   := ,
    ErrorPriority   := ,
    iTerminal_ID    := iTerminal_ID,
    pErrorSystem    := ErrorSystem,
    EnO             => ,
);

CH2_Error (
    En              := En,
    bError          := ,
    sErrorMessage   := ,
    ErrorPriority   := ,
    iTerminal_ID    := iTerminal_ID,
    pErrorSystem    := ErrorSystem,
    EnO             => ,
);

CH3_Error (
    En              := En,
    bError          := ,
    sErrorMessage   := ,
    ErrorPriority   := ,
    iTerminal_ID    := iTerminal_ID,
    pErrorSystem    := ErrorSystem,
    EnO             => ,
);

CH4_Error (
    En              := En,
    bError          := ,
    sErrorMessage   := ,
    ErrorPriority   := ,
    iTerminal_ID    := iTerminal_ID,
    pErrorSystem    := ErrorSystem,
    EnO             => ,
);

CH5_Error (
    En              := En,
    bError          := ,
    sErrorMessage   := ,
    ErrorPriority   := ,
    iTerminal_ID    := iTerminal_ID,
    pErrorSystem    := ErrorSystem,
    EnO             => ,
);]]></ST>
    </Implementation>
    <LineIds Name="EL3255">
      <LineId Id="34" Count="1" />
      <LineId Id="37" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="299" Count="0" />
      <LineId Id="140" Count="0" />
      <LineId Id="192" Count="4" />
      <LineId Id="205" Count="1" />
      <LineId Id="197" Count="0" />
      <LineId Id="207" Count="0" />
      <LineId Id="198" Count="3" />
      <LineId Id="141" Count="0" />
      <LineId Id="208" Count="13" />
      <LineId Id="203" Count="0" />
      <LineId Id="222" Count="13" />
      <LineId Id="204" Count="0" />
      <LineId Id="236" Count="13" />
      <LineId Id="202" Count="0" />
      <LineId Id="252" Count="13" />
      <LineId Id="251" Count="0" />
      <LineId Id="298" Count="0" />
      <LineId Id="297" Count="0" />
      <LineId Id="40" Count="9" />
      <LineId Id="142" Count="0" />
      <LineId Id="144" Count="7" />
      <LineId Id="143" Count="0" />
      <LineId Id="153" Count="28" />
      <LineId Id="152" Count="0" />
      <LineId Id="130" Count="0" />
      <LineId Id="182" Count="7" />
      <LineId Id="98" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>